# Tinderly

./: .gitignore  .pre-commit-config.yaml  .pylintrc  README.md  docker-compose.yml  pyproject.toml
user_service/: Dockerfile  Dockerfile.worker  pyproject.toml
user_service/src/app/: main.py  worker.py
user_service/src/app/api/: auth.py  smtp.py
user_service/src/app/core/: config.py
user_service/src/app/database/: crud.py  models.py  sessions.py
user_service/src/app/schemas/: enums.py  forms.py  schemas.py
user_service/src/app/utils/: utils.py
