[project]
name = "tinderly-dev"
version = "0.1.0"
description = ""
authors = [
    {name = "emexec",email = "toru7653@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pydantic[email] (>=2.11.5,<3.0.0)",
    "cryptography (>=45.0.4,<46.0.0)",
    "loguru (>=0.7.3,<0.8.0)",
    "inbox (>=0.2.10,<0.3.0)"
]

[tool.poetry]
name = "root-tools"
version = "0.1.0"
description = "Root-level tools for linting and type checking"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.13"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.7.0"
black = "^25.1.0"
pylint = "^3.3.7"
mypy = "^1.16.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
namespace_packages = true
explicit_package_bases = true
mypy_path = "user_service/src"
follow_imports = "skip"
disallow_untyped_defs = false
disallow_incomplete_defs = false
warn_unused_ignores = true
